--- a/proyecto-api/package.json
+++ b/proyecto-api/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/base": "^5.0.0-beta.40",
     "@mui/material": "^5.15.15",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "firebase": "^10.11.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0"
   },
