--- a/proyecto-api/package.json
+++ b/proyecto-api/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.16",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "firebase": "^10.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
